--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li><a href="#top3">intro</a></li>
-                    <li><a href="#grid-one">grid one</a></li>
+                    <li><a href="#grid">grid</a></li>
                     <li><a href="#galery">galery</a></li>
                     <li><a href="#">contats</a></li>
                 </ul>
@@ -44,6 +44,7 @@
         </div>
     </section>
     <section id="top3" class="white-bg section">
+
         <div class="main-content top3-content">
             <h2>TOP 3 JOBS</h2>
             <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run
@@ -53,23 +54,24 @@
                 that are in the pipeline.</p>
         </div>
     </section>
-    <section id="grid-one" class="grid-one section main-bg">
+    <section id="grid" class="grid-one section main-bg">
+
         <div class="grid-one-content main-content">
-            <h2 class="grid-main-heading">Grid One</h2>
+            <h2 class="grid-main-heading">Grid</h2>
             <p class="grid-descrition">Uma breve descrição</p>
             <div class="grid">
                 <article>
-                    <h3>Teste 1</h3>
+                    <h3>Teste</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odit similique, voluptatem iste labore et dolorum ratione ipsa debitis magnam sint reiciendis corporis. Tenetur odit enim odio voluptatibus. Perspiciatis, nobis?</p>
                 </article>
                 <article>
-                    <h3>Teste 2</h3>
+                    <h3>Teste</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nesciunt ipsam repudiandae perspiciatis ducimus perferendis, nam atque vel temporibus architecto, numquam soluta odit. Exercitationem eius incidunt aliquam quibusdam.
                         Iure, culpa?
                     </p>
                 </article>
                 <article>
-                    <h3>Teste 3</h3>
+                    <h3>Teste</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nesciunt ipsam repudiandae perspiciatis ducimus perferendis, nam atque vel temporibus architecto, numquam soluta odit. Exercitationem eius incidunt aliquam quibusdam.
                         Iure, culpa?
                     </p>
@@ -77,10 +79,30 @@
             </div>
         </div>
     </section>
-    <section id="galery" class="section">
-        <div class="menu-spacing"></div>
-        <div class="main-content">
-            <h1>Teste</h1>
+    <section id="galery" class="grid-one white-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-descrition">Uma breve descrição</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=1" alt="random image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=2" alt="random image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=3" alt="random image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=4" alt="random image unsplash">
+                </div class="gallery-img">
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=5" alt="random image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=6" alt="random image unsplash">
+                </div>
+            </div>
         </div>
 
     </section>
