--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h1><a href="#intro">LOGO</a></h1>
             <nav>
                 <ul>
-                    <li><a href="#top3">intro</a></li>
-                    <li><a href="#grid">grid</a></li>
-                    <li><a href="#galery">galery</a></li>
-                    <li><a href="#">contats</a></li>
+                    <li><a href="#top3">Quem Somos</a></li>
+                    <li><a href="#grid">Segmentos</a></li>
+                    <li><a href="#galery">Trabalhos</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
