--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 <body>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1><a href="#intro">LOGO</a></h1>
+            <h1>
+                <a href="#intro"><img src="assets/img/favicon.png"></a>
+            </h1>
             <nav>
                 <ul>
-                    <li><a href="#top3">Quem Somos</a></li>
-                    <li><a href="#grid">Segmentos</a></li>
-                    <li><a href="#galery">Trabalhos</a></li>
+                    <li><a href="#intro">Quem Somos</a></li>
+                    <li><a href="#top3">Segmentos</a></li>
+                    <li><a href="#grid">Trabalhos</a></li>
+                    <li><a href="#galery">Galeria</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
