--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="#intro">Quem Somos</a></li>
                     <li><a href="#top3">Segmentos</a></li>
-                    <li><a href="#grid">Trabalhos</a></li>
+                    <li><a href="#grid">Destaques</a></li>
                     <li><a href="#galery">Galeria</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
