--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="#intro"><img src="assets/img/favicon.png"></a>
+                <a href="#intro"><img src="assets/img/favicon.png " class="logo"></a>
             </h1>
             <nav>
                 <ul>
