--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="#intro"><img src="assets/img/favicon.png " class="logo"></a>
+                <a href="#intro">PubliQuem</a>
             </h1>
             <nav>
                 <ul>
@@ -108,6 +108,33 @@
             </div>
         </div>
 
+    </section>
+    <section id="contact" class="grid-one section main-bg">
+
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Contato</h2>
+            <p class="grid-descrition">Formas de entrar em contato e nos localizar.</p>
+            <div class="grid">
+                <article>
+                    <h3>WhatsApp</h3>
+                    <p style="font-size: 25px; font-weight: bold;">+55 (86) 98893-8513</p>
+                    <p>Leia o QR - Code com a câmera de seu celular para adicionar o contato automaticamente.</p>
+                    <img src="assets/img/qr-code.png" alt="Leia com a camera do celular para adicionar o contato automaticamente." class="img-qrcode">
+                </article>
+                <article>
+                    <h3>Email</h3>
+                    <p>publiquemds@gmail.com
+                    </p>
+                </article>
+                <article>
+                    <h3>Localização</h3>
+                    <p> R. Jornalísta Josípio Lustosa, 6646 - Mocambinho, Teresina - PI, 64010-790 </p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.4598519410524!2d-42.81645718587337!3d-5.028916652573407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e39b0721a067b%3A0xde566d6f0d4436e0!2sPubliquem%20Artes%20e%20Design!5e0!3m2!1spt-BR!2sbr!4v1640716317175!5m2!1spt-BR!2sbr"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+                    </iframe>
+                </article>
+            </div>
+        </div>
     </section>
 </body>
 
