--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#top3">Segmentos</a></li>
                     <li><a href="#grid">Destaques</a></li>
                     <li><a href="#galery">Galeria</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </div>
