--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <div class="menu-spacing"></div>
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>JANUARY BRINGS US FIREFOX 85</h2>
-                <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
+                <h2>A gráfica que nasceu para facilitar sua vida</h2>
+                <p>Com uma ótima localização, estamos atendendo prontamente toda a cidade.</p>
 
             </div>
             <div class="intro-img">
-                <img src="assets/img/react.svg" alt="Imagem com uma mulher em cima da molecula que representa o React Native.">
+                <img src="assets/img/favicon.png" alt="Imagem com uma mulher em cima da molecula que representa o React Native.">
             </div>
         </div>
     </section>
