--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <div class="intro-text-content">
                 <h2>A gráfica que nasceu para facilitar sua vida</h2>
                 <p>Com uma ótima localização, estamos atendendo prontamente toda a cidade.</p>
+
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/react.svg" alt="Imagem com uma mulher em cima da molecula que representa o React Native.">
             </div>
         </div>
     </section>
