--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section id="galery" class="grid-one white-bg section">
         <div class="grid-one-content main-content">
             <h2 class="grid-main-heading">Gallery</h2>
-            <p class="grid-descrition">Uma breve descrição</p>
+            <p class="grid-descrition">Fotos feitas pelo funcionário Ronaldo Silva em seu hobbie.<br> Instagram: @ronaldoep40</p>
             <div class="grid">
                 <div class="gallery-img">
                     <img src="assets/img/fotos/01.jpeg" alt="random image unsplash">
