--- a/products.html
+++ b/products.html
@@ -35,26 +35,26 @@
     </aside>
     <section id="galery" class="grid-one white-bg section">
         <div class="grid-one-content main-content">
-            <h2 class="grid-main-heading">Produtos</h2>
+            <h3 class="grid-main-heading">Produtos</h3>
             <p class="grid-descrition">Clique nas imagens para obter mais informações.</p>
             <div class="grid">
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=1" alt="random image unsplash">
+                    <img src="assets/img/fotos/01.jpeg" alt="random image unsplash">
                 </div>
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=2" alt="random image unsplash">
+                    <img src="assets/img/fotos/02.jpeg" alt="random image unsplash">
                 </div>
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=3" alt="random image unsplash">
+                    <img src="assets/img/fotos/03.jpeg" alt="random image unsplash">
                 </div>
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=4" alt="random image unsplash">
+                    <img src="assets/img/fotos/04.jpeg" alt="random image unsplash">
                 </div class="gallery-img">
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=5" alt="random image unsplash">
+                    <img src="assets/img/fotos/05.jpeg" alt="random image unsplash">
                 </div>
                 <div class="gallery-img">
-                    <img src="https://source.unsplash.com/random/360x360?r=6" alt="random image unsplash">
+                    <img src="assets/img/fotos/06.jpeg" alt="random image unsplash">
                 </div>
             </div>
         </div>
